--- a/common/app/assets/stylesheets/module/_social.scss
+++ b/common/app/assets/stylesheets/module/_social.scss
@@ -1,7 +1,7 @@
 .social {
-   margin: 0;
+   margin: 0 0 $baseline*4 0;
    list-style: none;
-   padding: $baseline*3 $gutter $baseline*4 $gutter;
+   padding: $baseline*3 $gutter 0 $gutter;
    min-height: 40px;
 }
  
