--- a/common/app/assets/stylesheets/module/nav/_pop-up.scss
+++ b/common/app/assets/stylesheets/module/nav/_pop-up.scss
@@ -14,11 +14,11 @@
     width: 100%;
 
     @media only screen and (min-width: $tablet) {
-        top: 118px;
+        top: 108px;
     }
 
     @media only screen and (min-width: $desktopAd) {
-        top: 155px;
+        top: 144px;
     }
 }
 
@@ -28,17 +28,14 @@
     @media only screen and (min-width: $tablet) {
         background-color: $neutral8;
         border-top: 1px solid $neutral10;
-        margin: 0px;
+        margin: 0;
     }
 }
 
 /* Search
    ========================================================================== */
 .nav-popup--search {
-    @media only screen and (min-width: $tablet) {
-        top: 152px;
-        margin-bottom: -57px;
-    }
+    min-height: 55px;
 }
 
 /* Small
