--- a/common/app/views/fragments/trails/thumbnail.scala.html
+++ b/common/app/views/fragments/trails/thumbnail.scala.html
@@ -2,7 +2,7 @@
 
 <@element class="trail trail--thumbnail t@rowNum" data-link-name="trail">
 
-    <div class="trail__head snap-to-grid">
+    <div class="trail__head">
         @fragments.relativeDate(trail.webPublicationDate, trail.isLive, isFront=true)
 
         <h@headingLevel class="trail__headline @charRange(trail.headline)">
