--- a/common/app/views/fragments/footer.scala.html
+++ b/common/app/views/fragments/footer.scala.html
@@ -16,9 +16,9 @@
         <li><a data-link-name="help" href="/help/2012/nov/26/guardian-mobile-site">Help</a></li>
     	<li><a data-link-name="contact" href="/help/contact-us">Contact us</a></li>
         <li><a data-link-name="feedback" target="_blank" href="http://survey.omniture.com/d1/hosted/815f9cfba1">Feedback</a></li>
-        <li class="swipe-on-off">Swipe
-            <button data-link-name="swipe-on"  href="">ON</button> | 
-            <button data-link-name="swipe-off" href="">OFF</button>
+        <li>Swipe
+            <button class="swipe-on"  data-link-name="switch-swipe-on"  href="">ON</button> | 
+            <button class="swipe-off" data-link-name="switch-swipe-off" href="">OFF</button>
         </li>
     </ul>
 
