--- a/common/app/assets/stylesheets/module/_footer.scss
+++ b/common/app/assets/stylesheets/module/_footer.scss
@@ -75,3 +75,7 @@
     margin: 0 $gutter;
     padding: $baseline*2 0;
 }
+
+.has-swipe .swipe-off { font-weight: normal; }
+.has-swipe .swipe-on  { font-weight: bold; }
+.swipe-off            { font-weight: bold; }
