--- a/common/app/views/fragments/footer.scala.html
+++ b/common/app/views/fragments/footer.scala.html
@@ -17,8 +17,8 @@
     	<li><a data-link-name="contact" href="/help/contact-us">Contact us</a></li>
         <li><a data-link-name="feedback" target="_blank" href="http://survey.omniture.com/d1/hosted/815f9cfba1">Feedback</a></li>
         <li>Swipe
-            <button class="swipe-on"  data-link-name="switch-swipe-on"  href="">ON</button> | 
-            <button class="swipe-off" data-link-name="switch-swipe-off" href="">OFF</button>
+            <button class="swipe-on"  data-link-name="switch-swipe-on">ON</button> | 
+            <button class="swipe-off" data-link-name="switch-swipe-off">OFF</button>
         </li>
     </ul>
 
