--- a/discussion/app/views/fragments/commentsBody.scala.html
+++ b/discussion/app/views/fragments/commentsBody.scala.html
@@ -1,6 +1,12 @@
 @(page: CommentPage)(implicit request: RequestHeader)
 
-<h1>Comments for <a href="@page.contentUrl">@page.title</a></h1>
+<h2 class="page-head page-head--article">Comments</h2>
+
+<header class="article__head">
+    <h1 class="article-headline @charRange(page.title)">
+        <a href="@page.contentUrl">@page.title</a>
+    </h1>
+</header>
 
 <div class="d-thread-list">
 
