--- a/discussion/app/views/fragments/comment.scala.html
+++ b/discussion/app/views/fragments/comment.scala.html
@@ -1,29 +1,32 @@
 @(comment: Comment, isResponse: Boolean = false)(implicit request: RequestHeader)
 
-<div class="d-comment @if(isResponse){d-comment--response}else{d-comment--top-level} media"
-    itemscope itemtype="http://schema.org/Comment">
-    @if(comment.isHighlighted){ <div class="d-comment__pick">Editor’s pick</div> }
-    <div class="d-comment__media media__img">
-        <a href="d-comment__avatar-wrapper">
-            <img src="@comment.profile.avatar" alt="" class="d-comment__avatar" width="40" height="40" />
-        </a>
-        <div class="d-comment__author-status-wrapper">
-            @if(comment.profile.isStaff){<i class="d-i d-i--contributor d-comment__author-status">Contributor</i> }
-            @if(comment.profile.isContributor){
-                <i class="d-i d-i--staff d-comment__author-status" title="Guardian staff" itemprop="jobTitle">Guardian Staff</i>
-            }
+<li class="d-comment @if(isResponse){d-comment--response}else{d-comment--top-level}">
+    @if(comment.isHighlighted){<div class="d-comment__pick">Guardian pick</div>}
+    <div class="d-comment-header">
+        <div class="d-comment__media">
+            <span class="d-comment__avatar-wrapper"><img src="@comment.profile.avatar" alt="" class="d-comment__avatar" width="36" height="36" /></span>
+            <div class="d-comment__author-status-wrapper">
+                @if(comment.profile.isContributor){<i class="d-i d-i--contributor d-comment__author-status">Contributor</i>}
+                @if(comment.profile.isStaff){<i class="d-i d-i--contributor d-comment__author-status" title="Guardian staff">Guardian Staff</i>}
+            </div>
         </div>
-    </div>
-    <div class="d-comment__main media__body">
-        <div class="d-comment__header">
-            <div><a href="#" class="d-comment__author"><b>@comment.profile.displayName</b></a></div>
-            <time class="d-comment__time js-timestamp" itemprop="datePublished"
+        <div class="d-comment__meta">
+            <div><span class="d-comment__author"><b>@comment.profile.displayName</b></span></div>
+            <div><span class="d-comment__time"><b><time class="d-comment__time js-timestamp"
                 datetime="@comment.date.toString("yyyy-MM-dd'T'HH:mm:ss'Z'")" data-timestamp="@comment.date.getMillis">
                 @Format(comment.date, "d MMM y")
-            </time>
-        </div>
-        <div class="d-comment__body">
-        @Html(comment.body)
+            </time></b></span></div>
         </div>
     </div>
-</div>
+    <div class="d-comment__main">
+        <div class="d-comment__body">@Html(comment.body)</div>
+    </div>
+
+    @if(comment.responses.nonEmpty){
+        <ul class="d-thread">
+            @comment.responses.map{ response =>
+                @fragments.comment(response, true)
+            }
+        </ul>
+    }
+</li>
