--- a/discussion/app/views/fragments/commentsBody.scala.html
+++ b/discussion/app/views/fragments/commentsBody.scala.html
@@ -1,9 +1,105 @@
 @(page: CommentPage)(implicit request: RequestHeader)
 
-<div class="d-thread-list">
-
-@page.comments.map{ comment =>
-    @fragments.commentThread(comment)
+<style>
+.d-thread {
+    list-style: none;
+    margin-left: 0;
+    padding-left: 0;
+}
+.d-thread .d-thread {
+    padding-left: 51px; /* aligns with top level comment's body */
+}
+.d-comment {
+    padding: 1px 0 16px;
+}
+.d-thread .d-thread .d-comment,
+.d-comment + .d-comment {
+    border-top: 1px solid #cfcfcd;
 }
 
-</div><!-- /.d-thread-list -->
+.d-comment__author-status,
+.d-comment__pick { display: none; }
+
+.d-comment__avatar-wrapper {
+    display: block;
+}
+.d-comment__avatar {
+    padding-top: 3px; /* align avatar with body text */
+}
+
+.d-comment__meta {
+    line-height: 1.3;
+}
+
+.d-comment__body {
+    word-break: break-all;
+    word-break: break-word;
+    word-wrap: break-word;
+}
+.d-comment__body p {
+    margin-top: 0;
+}
+.d-comment__body blockquote {
+    color: #767676;
+    margin-left: 16px;
+}
+
+.d-comment__time {
+    color: #767676;
+}
+
+
+/**
+ * Simulate Media object on Comments header
+ * To have an image or a media on the left,
+ * and a content block on its right.
+ * See benefits of this technique:
+ * - www.stubbornella.org/content/2010/06/25/the-media-object-saves-hundreds-of-lines-of-code/
+ * - http://jsfiddle.net/necolas/rZvEF/
+ */
+.d-comment-header {
+    zoom: 1;
+}
+.d-comment-header:before,
+.d-comment-header:after {
+    content: '.';
+    display: block;
+    overflow: hidden;
+    visibility: hidden;
+    font-size: 0;
+    line-height: 0;
+    width: 0;
+    height: 0;
+}
+.d-comment-header:after {
+    clear: both;
+}
+.d-comment__media {
+    float: left;
+    margin-right: 15px;
+}
+.d-comment__media img {
+    display: block;
+    max-width: 100%; /* 1 */
+}
+
+/**
+ * 1. Create new block formatting context in modern browsers
+ * 2. Avoid shrink-wrap behaviour of table-cell
+ * 3. Override for IE6/7
+ * 4. Create new block formatting context in IE6/7
+*/
+.d-comment__meta {
+    display: table-cell; /* 1 */
+    max-width: 100%;
+    width: 10000px; /* 2 */
+    *width: auto; /* 3 */
+    *zoom:1; /* 4 */
+}
+</style>
+
+<ul class="d-thread">
+    @page.comments.map{ comment =>
+        @fragments.commentThread(comment)
+    }
+</ul>
