--- a/discussion/app/views/fragments/comment.scala.html
+++ b/discussion/app/views/fragments/comment.scala.html
@@ -1,25 +1,37 @@
 @(comment: Comment, isResponse: Boolean = false)(implicit request: RequestHeader)
 
-<li class="d-comment @if(isResponse){d-comment--response}else{d-comment--top-level}">
-    @if(comment.isHighlighted){<div class="d-comment__pick">Guardian pick</div>}
-    <div class="d-comment-header">
-        <div class="d-comment__media">
-            <span class="d-comment__avatar-wrapper"><img src="@comment.profile.avatar" alt="" class="d-comment__avatar" width="36" height="36" /></span>
-            <div class="d-comment__author-status-wrapper">
-                @if(comment.profile.isContributor){<i class="d-i d-i--contributor d-comment__author-status">Contributor</i>}
-                @if(comment.profile.isStaff){<i class="d-i d-i--contributor d-comment__author-status" title="Guardian staff">Guardian Staff</i>}
+<li class="d-comment @if(isResponse){d-comment--response}else{d-comment--top-level}
+    @if(comment.isBlocked){d-comment--blocked}" id="comment-@comment.id">
+    <div class="d-comment__inner">
+        @if(comment.isHighlighted && !comment.isBlocked){<div class="d-comment__pick">Guardian pick</div>}
+        <div class="d-comment-header">
+            <div class="d-comment__media">
+                <span class="d-comment__avatar-wrapper"><img src="@comment.profile.avatar" alt="" class="d-comment__avatar" width="36" height="36" /></span>
+                <div class="d-comment__author-status-wrapper">
+                    @if(comment.profile.isContributor){<i class="d-i d-i--contributor d-comment__author-status">Contributor</i>}
+                    @if(comment.profile.isStaff){<i class="d-i d-i--contributor d-comment__author-status" title="Guardian staff">Guardian Staff</i>}
+                </div>
+            </div>
+            <div class="d-comment__meta">
+                <div><span class="d-comment__author">@comment.profile.displayName</span></div>
+                <div><span class="d-comment__time"><b><time class="d-comment__time js-timestamp"
+                    datetime="@comment.date.toString("yyyy-MM-dd'T'HH:mm:ss'Z'")" data-timestamp="@comment.date.getMillis">
+                    @Format(comment.date, "d MMM y")
+                </time></b></span></div>
             </div>
         </div>
-        <div class="d-comment__meta">
-            <div><span class="d-comment__author"><b>@comment.profile.displayName</b></span></div>
-            <div><span class="d-comment__time"><b><time class="d-comment__time js-timestamp"
-                datetime="@comment.date.toString("yyyy-MM-dd'T'HH:mm:ss'Z'")" data-timestamp="@comment.date.getMillis">
-                @Format(comment.date, "d MMM y")
-            </time></b></span></div>
+        <div class="d-comment__main">
+            <div class="d-comment__body">
+                @if(comment.isBlocked){<p>@Html(comment.body)</p>}else{@Html(comment.body)}
+            </div>
         </div>
-    </div>
-    <div class="d-comment__main">
-        <div class="d-comment__body">@Html(comment.body)</div>
+        @if(!comment.isBlocked){
+            <div class="d-comment__actions">
+                <div class="d-comment__actions__main">
+                    <a href="#" class="d-comment__action d-comment__action--report">Report</a>
+                </div>
+            </div>
+        }
     </div>
 
     @if(comment.responses.nonEmpty){
