Adding initial discussion JS

--- a/common/app/assets/stylesheets/head.scss
+++ b/common/app/assets/stylesheets/head.scss
@@ -29,6 +29,7 @@
 @import "module/trails/_trail";
 @import "module/media";
 @import "module/_article";
+@import "module/_discussion";
 
 //External modules
 //These are for styling HTML that we get from external sources
