--- a/common/app/assets/stylesheets/module/nav/_control.scss
+++ b/common/app/assets/stylesheets/module/nav/_control.scss
@@ -98,11 +98,16 @@ span.control__menu.i-menu {
 /* Top stories control
  ========================================================================== */
 
-.control--topstories {
+.control--topstories,
+.control--topstories:link,
+.control--topstories:active,
+.control--topstories:hover,
+.control--topstories:visited {
     float: right;
     height: 28px;
     margin: 0;
     padding: 17px 0 13px 0;
+    color: #fff;
 
     @media only screen and (min-width: $tablet) {
         position: absolute;
