--- a/common/app/views/fragments/footer.scala.html
+++ b/common/app/views/fragments/footer.scala.html
@@ -15,9 +15,9 @@
         <li><a data-link-name="feedback" target="_blank" href="http://survey.omniture.com/d1/hosted/815f9cfba1">Feedback</a></li>
         <li>
             <span class="swipe-on-off">
-                Swipe
-                <button class="swipe-on"  data-link-name="switch-swipe-on">ON</button>
-                <button class="swipe-off" data-link-name="switch-swipe-off">OFF</button>
+                Swipe: 
+                <button class="swipe-on"  data-link-name="switch-swipe-on">Turn ON</button>
+                <button class="swipe-off" data-link-name="switch-swipe-off">Turn OFF</button>
             </span>
         </li>
     </ul>
