--- a/common/app/views/fragments/header.scala.html
+++ b/common/app/views/fragments/header.scala.html
@@ -31,7 +31,7 @@
     }
 
     <a href="/top-stories" data-is-ajax data-link-name="Top stories" data-control-for="nav-popup-topstories"
-        class="control control--topstories @if(SearchSwitch.isSwitchedOff) { edge }">
+        class="control control--topstories @if(SearchSwitch.isSwitchedOff) { control--right }">
         <i class="i i-nav-divider"></i>
         <span>Top stories</span>
         <i class="i i-top-stories"></i>
