Fixed compilation issues

--- a/common/app/assets/stylesheets/module/_discussion.scss
+++ b/common/app/assets/stylesheets/module/_discussion.scss
@@ -7,7 +7,7 @@
     @include rounded-corners(20px);
     @extend %type-12;
     font-weight: bold;
-    background-color: $actionBlue;
+    background-color: $linkBlue;
     color: #fff;
     padding: 2px 6px;
     margin-left: 4px;
