--- a/discussion/app/views/comments.scala.html
+++ b/discussion/app/views/comments.scala.html
@@ -6,7 +6,7 @@
     <h2 class="page-head page-head--article">Comments</h2>
 
     <header class="article__head">
-        <h1 class="article-headline @charRange(page.title)">
+        <h1 class="article-headline">
             <a href="@page.contentUrl">@page.title</a>
         </h1>
     </header>
